# backend/src/main/java/com/shiftarc/api/task/TaskType.java
@@ -1,0 +1,6 @@
+package com.shiftarc.api.task;
+
+public enum TaskType {
+    WORK_ITEM,
+    HABIT
+}
